--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
+        classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
