--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.5.1'
-        
-        
+        classpath 'io.realm:realm-gradle-plugin:3.5.0'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
