バーコード設置/それぞれの登録画面作成/検索ListView完成/詳細画面完成/登録機能完成/並び替え機能追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
     <application
         android:name=".BookApp"
@@ -27,7 +29,7 @@
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="jp.shiningplace.erika.takenoue.everything.MainActivity"/>
+                android:value="jp.shiningplace.erika.takenoue.everything.MainActivity" />
         </activity>
         <activity android:name=".BarcodeActivity"
             android:label="バーコードから登録"
@@ -54,11 +56,26 @@
             android:label="詳細画面"
             android:theme="@style/AppTheme">
         </activity>
-
+        <activity android:name=".DetailViewPagerActivity"
+            android:label="本の詳細"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".EditingActivity"
+            android:parentActivityName=".DetailViewPagerActivity"
+            android:label="編集画面"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".SettingActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="設定"
+            android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".BackupActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="バックアップ"
+            android:theme="@style/AppTheme">
+        </activity>
 
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
 </manifest>
